--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,6 +2,13 @@ a{
     color: white;
 text-decoration: none;
 }
+.nav-item{
+    margin-left: 40px;
+}
+/* .nav-item:hover{
+    
+    
+} */
 .navbar-light .navbar-brand {
     color:white;
 }
