Day_6 today 3 types Css

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -15,7 +15,12 @@ a{
     position: relative;
     top: -20px;
 }
+.poster_items{
+    color: black;
+    background: white;
+}
 .posterImage_overlay{
+    color: blue;
     position: relative;
     top: -200px;
     text-align: left;
