--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,5 +1,5 @@
 *{
-    color:white;
+    /* color:white; */
     font-size: medium;
     
 }
@@ -16,13 +16,15 @@ a{
     top: -20px;
 }
 .poster_items{
-    color: black;
-    background: white;
+    color: white;
+    background: rgba(83, 81, 81, 0.5);
+    padding: 2px;
+    border-radius: 10px;
 }
 .posterImage_overlay{
     color: blue;
     position: relative;
-    top: -200px;
+    top: -300px;
     text-align: left;
     padding-left: 10px;
     width: 500px;
